testdata/ingress-test001.yaml
apiVersion: acme.ketches.cn/v1alpha1
kind: Issuer
metadata:
  name: cloudflare001
spec:
  solver: cloudflare
  email: test.kube-acme@ketches.cn
  keys: 
    # CLOUDFLARE_DNS_API_TOKEN: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
    CLOUDFLARE_DNS_API_TOKEN: 7W0shpGJWVkzEaqhPeheT9LXhewzSnOWd7qiYaCd

---
apiVersion: acme.ketches.cn/v1alpha1
kind: Certificate
metadata:
  name: test001-tls
spec:
  issuer: cloudflare001
  secretName: test001-tls
  domains: 
  - test001.kube-acme.ketches.cn
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test001
  labels:
    name: test001
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - test001.kube-acme.ketches.cn
    secretName: test001-tls
  rules:
  - host: test001.kube-acme.ketches.cn
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
